CPP_CORE/include/creative_core_api.h

typedef void* CreativeTileStoreHandle;
typedef void* CreativeDocumentHandle;
// Native document/layer metadata model. Qt/Python owns presentation objects;
// structural state and validation remain in CreativeCore.
CreativeDocumentHandle cs_document_create(int width, int height, int dpi);
void cs_document_destroy(CreativeDocumentHandle handle);
int cs_document_add_layer(CreativeDocumentHandle handle, const char* name,
                          int* index);
void cs_document_reset_layers(CreativeDocumentHandle handle);
int cs_document_create_group(CreativeDocumentHandle handle, const int* indices,
                             int count, const char* name, int* group_index);
int cs_document_remove_group(CreativeDocumentHandle handle, int group_index);
int cs_document_set_group_property(CreativeDocumentHandle handle, int group_index,
                                   int property, double requested, double* output);
void cs_document_reset_groups(CreativeDocumentHandle handle);
int cs_document_group_count(CreativeDocumentHandle handle);
int cs_document_group_for_layer(CreativeDocumentHandle handle, int layer_index);
int cs_document_remove_layer(CreativeDocumentHandle handle, int index);
int cs_document_reorder_layers(CreativeDocumentHandle handle, const int* order,
                               int count, int active_index);
int cs_document_select_layer(CreativeDocumentHandle handle, int index);
int cs_document_rename_layer(CreativeDocumentHandle handle, int index,
                             const char* name);
int cs_document_set_layer_property(CreativeDocumentHandle handle, int index,
                                   int property, double requested,
                                   double* output);
int cs_document_layer_count(CreativeDocumentHandle handle);
int cs_document_active_layer(CreativeDocumentHandle handle);
int cs_document_layer_info(CreativeDocumentHandle handle, int index,
                           uint64_t* id, int* visible, float* opacity,
                           int* locked, int* lock_alpha, int* clipping);
int cs_document_copy_layer_name(CreativeDocumentHandle handle, int index,
                                char* output, int capacity);
typedef struct CsTileWrite {
    int tile_x;
    int tile_y;
    const uint8_t* pixels;
    int width;
    int height;
    int stride;
    int image_format;
} CsTileWrite;
// Sparse resident tile map; Python owns only Qt adapters and scratch files.
CreativeTileStoreHandle cs_tile_store_create(int width, int height, int tile_size);
void cs_tile_store_destroy(CreativeTileStoreHandle handle);
int cs_tile_store_set(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                      const uint8_t* pixels, int width, int height, int stride,
                      int image_format);
int cs_tile_store_set_many(CreativeTileStoreHandle handle,
                           const CsTileWrite* writes, int count);
int cs_tile_store_copy(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                       uint8_t* output, int width, int height, int stride,
                       int image_format);
int cs_tile_store_copy_store(CreativeTileStoreHandle destination,
                             CreativeTileStoreHandle source);
int cs_tile_store_materialize(CreativeTileStoreHandle handle, uint8_t* output,
                              int width, int height, int stride, int image_format);
int cs_tile_store_info(CreativeTileStoreHandle handle, int tile_x, int tile_y,
                       int* resident, uint64_t* revision, uint64_t* last_access);
int cs_tile_store_copy_keys(CreativeTileStoreHandle handle, int* xy_pairs,
                            int pair_capacity);
int cs_tile_store_remove(CreativeTileStoreHandle handle, int tile_x, int tile_y);