CORE/native_bridge.py


def _configure_document_state(library) -> None:
    """Declare the native document/layer metadata ABI once."""
    handle = ctypes.c_void_p
    library.cs_document_create.argtypes = [ctypes.c_int, ctypes.c_int, ctypes.c_int]
    library.cs_document_create.restype = handle
    library.cs_document_destroy.argtypes = [handle]
    library.cs_document_destroy.restype = None
    library.cs_document_add_layer.argtypes = [handle, ctypes.c_char_p,
                                              ctypes.POINTER(ctypes.c_int)]
    library.cs_document_add_layer.restype = ctypes.c_int
    library.cs_document_reset_layers.argtypes = [handle]
    library.cs_document_reset_layers.restype = None
    library.cs_document_create_group.argtypes = [handle, ctypes.POINTER(ctypes.c_int),
        ctypes.c_int, ctypes.c_char_p, ctypes.POINTER(ctypes.c_int)]
    library.cs_document_create_group.restype = ctypes.c_int
    library.cs_document_remove_group.argtypes = [handle, ctypes.c_int]
    library.cs_document_remove_group.restype = ctypes.c_int
    library.cs_document_set_group_property.argtypes = [
        handle, ctypes.c_int, ctypes.c_int, ctypes.c_double,
        ctypes.POINTER(ctypes.c_double)]
    library.cs_document_set_group_property.restype = ctypes.c_int
    library.cs_document_reset_groups.argtypes = [handle]
    library.cs_document_reset_groups.restype = None
    library.cs_document_group_count.argtypes = [handle]
    library.cs_document_group_count.restype = ctypes.c_int
    library.cs_document_group_for_layer.argtypes = [handle, ctypes.c_int]
    library.cs_document_group_for_layer.restype = ctypes.c_int
    library.cs_document_remove_layer.argtypes = [handle, ctypes.c_int]
    library.cs_document_remove_layer.restype = ctypes.c_int
    library.cs_document_reorder_layers.argtypes = [handle,
        ctypes.POINTER(ctypes.c_int), ctypes.c_int, ctypes.c_int]
    library.cs_document_reorder_layers.restype = ctypes.c_int
    library.cs_document_select_layer.argtypes = [handle, ctypes.c_int]
    library.cs_document_select_layer.restype = ctypes.c_int
    library.cs_document_rename_layer.argtypes = [handle, ctypes.c_int, ctypes.c_char_p]
    library.cs_document_rename_layer.restype = ctypes.c_int
    library.cs_document_set_layer_property.argtypes = [
        handle, ctypes.c_int, ctypes.c_int, ctypes.c_double,
        ctypes.POINTER(ctypes.c_double)]
    library.cs_document_set_layer_property.restype = ctypes.c_int
    library.cs_document_layer_count.argtypes = [handle]
    library.cs_document_layer_count.restype = ctypes.c_int
    library.cs_document_active_layer.argtypes = [handle]
    library.cs_document_active_layer.restype = ctypes.c_int
    library.cs_document_layer_info.argtypes = [
        handle, ctypes.c_int, ctypes.POINTER(ctypes.c_uint64),
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_int),
        ctypes.POINTER(ctypes.c_int)]
    library.cs_document_layer_info.restype = ctypes.c_int
    library.cs_document_copy_layer_name.argtypes = [
        handle, ctypes.c_int, ctypes.c_char_p, ctypes.c_int]
    library.cs_document_copy_layer_name.restype = ctypes.c_int


class NativeDocumentStateHandle:
    """C++-owned document/layer structure used by Qt-facing models."""

    def __init__(self, library, width: int, height: int, dpi: int):
        self._library = library
        self._handle = library.cs_document_create(int(width), int(height), int(dpi))

    def __bool__(self):
        return bool(self._handle)

    def close(self):
        if self._handle:
            handle, self._handle = self._handle, None
            self._library.cs_document_destroy(handle)

    def __del__(self):
        try:
            self.close()
        except Exception:
            pass

    @property
    def layer_count(self) -> int:
        return int(self._library.cs_document_layer_count(self._handle)) if self._handle else 0

    @property
    def active_layer(self) -> int:
        return int(self._library.cs_document_active_layer(self._handle)) if self._handle else -1

    def add_layer(self, name: str) -> int | None:
        if not self._handle:
            return None
        index = ctypes.c_int()
        encoded = str(name).encode("utf-8")
        if not self._library.cs_document_add_layer(self._handle, encoded,
                                                   ctypes.byref(index)):
            return None
        return int(index.value)

    def reset_layers(self) -> None:
        if self._handle:
            self._library.cs_document_reset_layers(self._handle)

    def create_group(self, indices, name: str) -> int | None:
        if not self._handle or not indices:
            return None
        values = (ctypes.c_int * len(indices))(*(int(item) for item in indices))
        group_index = ctypes.c_int(-1)
        if not self._library.cs_document_create_group(
                self._handle, values, len(indices), str(name).encode("utf-8"),
                ctypes.byref(group_index)):
            return None
        return int(group_index.value)

    def remove_group(self, group_index: int) -> bool:
        return bool(self._handle and self._library.cs_document_remove_group(
            self._handle, int(group_index)))

    def set_group_property(self, group_index: int, property_id: int,
                           requested: float) -> float | None:
        if not self._handle:
            return None
        output = ctypes.c_double()
        if not self._library.cs_document_set_group_property(
                self._handle, int(group_index), int(property_id), float(requested),
                ctypes.byref(output)):
            return None
        return float(output.value)

    def reset_groups(self) -> None:
        if self._handle:
            self._library.cs_document_reset_groups(self._handle)

    @property
    def group_count(self) -> int:
        return int(self._library.cs_document_group_count(self._handle)) if self._handle else 0

    def group_for_layer(self, index: int) -> int:
        return int(self._library.cs_document_group_for_layer(
            self._handle, int(index))) if self._handle else -1

    def remove_layer(self, index: int) -> bool:
        return bool(self._handle and self._library.cs_document_remove_layer(
            self._handle, int(index)))

    def select_layer(self, index: int) -> bool:
        return bool(self._handle and self._library.cs_document_select_layer(
            self._handle, int(index)))

    def reorder_layers(self, order, active_index: int) -> bool:
        if not self._handle or not order:
            return False
        values = (ctypes.c_int * len(order))(*(int(item) for item in order))
        return bool(self._library.cs_document_reorder_layers(
            self._handle, values, len(order), int(active_index)))

    def rename_layer(self, index: int, name: str) -> bool:
        return bool(self._handle and self._library.cs_document_rename_layer(
            self._handle, int(index), str(name).encode("utf-8")))

    def set_layer_property(self, index: int, property_id: int,
                           requested: float) -> float | None:
        if not self._handle:
            return None
        output = ctypes.c_double()
        if not self._library.cs_document_set_layer_property(
                self._handle, int(index), int(property_id), float(requested),
                ctypes.byref(output)):
            return None
        return float(output.value)

    def layer_info(self, index: int) -> dict | None:
        if not self._handle:
            return None
        native_id = ctypes.c_uint64()
        visible, locked, lock_alpha, clipping = (ctypes.c_int() for _ in range(4))
        opacity = ctypes.c_float()
        if not self._library.cs_document_layer_info(
                self._handle, int(index), ctypes.byref(native_id),
                ctypes.byref(visible), ctypes.byref(opacity), ctypes.byref(locked),
                ctypes.byref(lock_alpha), ctypes.byref(clipping)):
            return None
        capacity = 4096
        name = ctypes.create_string_buffer(capacity)
        if self._library.cs_document_copy_layer_name(
                self._handle, int(index), name, capacity) < 0:
            return None
        return {"id": int(native_id.value), "name": name.value.decode("utf-8"),
                "visible": bool(visible.value), "opacity": float(opacity.value),
                "locked": bool(locked.value), "lock_alpha": bool(lock_alpha.value),
                "clipping": bool(clipping.value)}


class NativeTileStoreHandle:
    """Owns a native sparse-tile store and contains its complete ctypes ABI.

    The document/UI adapter should exchange QImages and Python coordinates;
    raw pointers, out-parameters, and C arrays stay confined to this bridge.
    """

    def __init__(self, library, width: int, height: int, tile_size: int):
        self._library = library
        self._handle = library.cs_tile_store_create(int(width), int(height), int(tile_size))

    def __bool__(self):
        return bool(self._handle)

    def close(self):
        if self._handle:
            handle, self._handle = self._handle, None
            self._library.cs_tile_store_destroy(handle)

    def info(self, tx, ty):
        if not self._handle:
            return None
        resident, revision, access = ctypes.c_int(), ctypes.c_uint64(), ctypes.c_uint64()
        if not self._library.cs_tile_store_info(self._handle, int(tx), int(ty),
                ctypes.byref(resident), ctypes.byref(revision), ctypes.byref(access)):
            return None
        return bool(resident.value), int(revision.value), int(access.value)

    def keys(self):
        if not self._handle:
            return set()
        count = self._library.cs_tile_store_copy_keys(self._handle, None, 0)
        if count <= 0:
            return set()
        values = (ctypes.c_int * (count * 2))()
        copied = self._library.cs_tile_store_copy_keys(self._handle, values, count)
        return {(values[i * 2], values[i * 2 + 1]) for i in range(max(0, copied))}

    def count(self):
        return len(self.keys())

    def remove(self, tx, ty):
        return bool(self._handle and self._library.cs_tile_store_remove(
            self._handle, int(tx), int(ty)))

    def _image_call(self, symbol, image, *args):
        return bool(self._library.__getattribute__(symbol)(self._handle, *args,
            qimage_pointer(image), image.width(), image.height(),
            image.bytesPerLine(), image.format().value))

    def set(self, tx, ty, image):
        return self._image_call("cs_tile_store_set", image, int(tx), int(ty))

    def set_many(self, writes):
        if not self._handle:
            return False
        tile_type = self._library._cs_tile_write_type
        keepalive = []
        records = []
        for tx, ty, image in writes:
            pixels = qimage_pointer(image)
            keepalive.append(pixels)
            records.append(tile_type(int(tx), int(ty), pixels, image.width(),
                image.height(), image.bytesPerLine(), image.format().value))
        array_type = tile_type * max(1, len(records))
        array_value = array_type(*records) if records else array_type()
        return bool(self._library.cs_tile_store_set_many(
            self._handle, array_value, len(records)))

    def copy(self, tx, ty, image):
        return self._image_call("cs_tile_store_copy", image, int(tx), int(ty))

    def copy_resident_from(self, source: "NativeTileStoreHandle") -> bool:
        return bool(self._handle and source and self._library.cs_tile_store_copy_store(
            self._handle, source._handle))

    def materialize(self, image):
        return self._image_call("cs_tile_store_materialize", image)
